--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "express": "3.4.4",
     "jade": "*",
+    "mssql": "^1.2.0",
+    "node-mssql-connector": "^0.2.5",
     "socket.io": "^1.1.0",
+    "sqlcut-mysql": "^0.1.0",
     "stylus": "*"
   }
 }
