added TMDb class
added TMDb class for getting movie information using the moviedb nodejs
module and integrated into RefreshActiveDatabase (effectively the main
function in this application)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "3.4.4",
     "jade": "*",
+    "moviedb": "^0.1.9",
     "mssql": "^1.2.0",
     "node-mssql-connector": "^0.2.5",
     "socket.io": "^1.1.0",
